codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__chatwidget_markdown_code_blocks_vt100_snapshot.snap
---
source: tui_app_server/src/chatwidget/tests.rs
assertion_line: 13169
expression: term.backend().vt100().screen().contents()
---


































•     -- Indented code block (4 spaces)

      SELECT *
      FROM "users"
      WHERE "email" LIKE '%@example.com';

  ```sh
  printf 'fenced within fenced\n'
  ```

  {
    // comment allowed in jsonc
    "path": "C:\\Program Files\\App",
    "regex": "^foo.*(bar)?$"
  }
